News UAT/force-app/main/default/objects/Answer__c/fields/Briefing_Form__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form__c</fullName>
    <label>Briefing Form</label>
    <referenceTo>Briefing_Form__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>