News UAT/force-app/main/default/objects/Answer__c/fields/IsMultiAnswer__c.field-meta.xml
<CustomField>
    <fullName>IsMultiAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMultiAnswer</label>
    <type>Checkbox</type>
</CustomField>