News UAT/force-app/main/default/objects/Answer__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>